<resources>
    <string name="app_name">GitHubUser</string>
    <string name="searchbar_hint">Search user…</string>
    <string name="followers">%1s followers</string>
    <string name="following">%1s following</string>
    <string name="followers_tab">Followers</string>
    <string name="following_tab">Following</string>
    <string name="user_name">User name</string>
    <string name="full_name">Full name</string>
    <string name="no_user_found">No user found</string>
    <string name="no_followers">No followers</string>
    <string name="not_following_anyone">Not following anyone</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="display">Display</string>
    <string name="theme">Theme</string>
    <string name="choose_theme">Choose theme</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_default">System default</string>
    <string name="favorite_list_is_empty">Favorite list is empty</string>
    <string name="added">added</string>
    <string name="theme_icon">Theme Icon</string>
</resources>